--- a/GhasreMobile/Views/Gallery/AlbumView.cshtml
+++ b/GhasreMobile/Views/Gallery/AlbumView.cshtml
@@ -13,23 +13,22 @@
 
 <div class="mat-card col">
     <div class="gallery-grid">
-        <h3 class="uk-margin-bottom"> گالری محصول @Model.Name</h3>
+        <h3 class="uk-margin-bottom uk-text-center">@Model.Name</h3>
         <div class="grid" uk-lightbox>
             @foreach (var item in Model.TblImage)
             {
-                @if (item.Image.ToLower().Contains(".mp4") || item.Image.ToLower().Contains(".mkv") || item.Image.ToLower().Contains(".avi"))
+                @if (item.Image.ToLower().Contains(".mp4") || item.Image.ToLower().Contains(".mkv") || item.Image.ToLower().Contains(".avi") || item.Image.ToLower().Contains(".ts"))
                 {
-                    <video class="video-playback uk-margin-auto-left uk-margin-auto-right white-area-margin" controls controlsList="nodownload">
-                        <source src="~/Images/ProductAlbum/@item.Image" type="video/mp4">
-                    </video>
+                    <a href="~/Images/Album/@item.Image" data-caption="@Model.Name">
+                        <img src="~/st/r/logoInVideo.png" alt="@Model.Name" />
+                    </a>
                 }
                 else
                 {
-                    <a href="~/Images/ProductAlbum/@item.Image" data-caption="@Model.Name">
-                        <img src="~/Images/ProductAlbum/@item.Image" alt="@Model.Name" />
+                    <a href="~/Images/Album/@item.Image" data-caption="@Model.Name">
+                        <img src="~/Images/Album/@item.Image" alt="@Model.Name" />
                     </a>
                 }
-
             }
         </div>
         <div class="row">
