--- a/GhasreMobile/Views/Affiliate/StoreView.cshtml
+++ b/GhasreMobile/Views/Affiliate/StoreView.cshtml
@@ -47,30 +47,36 @@
     <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slider>
 
         <ul class="uk-slider-items uk-child-width-1-3 uk-child-width-1-3@s uk-child-width-1-4@m">
-            @*@foreach (var item in Model)
+            @foreach (var item in Model.TblStoreImageRel)
             {
-
-            }*@
-            <li>
-                <img src="~/st/r/phones/p1.jpg" alt="">
-                <div class="uk-position-center uk-panel"></div>
-            </li>
-            <li>
-                <img src="~/st/r/phones/p2.jpg" alt="">
-                <div class="uk-position-center uk-panel"></div>
-            </li>
-            <li>
-                <img src="~/st/r/phones/p3.jpg" alt="">
-                <div class="uk-position-center uk-panel"></div>
-            </li>
-            <li>
-                <img src="~/st/r/phones/p4.jpg" alt="">
-                <div class="uk-position-center uk-panel"></div>
-            </li>
-            <li>
-                <img src="~/st/r/phones/p5.jpg" alt="">
-                <div class="uk-position-center uk-panel"></div>
-            </li>
+                @if (item.Image != null)
+                {
+                    <li>
+                        <img src="~/Images/Store/@item.Image" alt="">
+                        <div class="uk-position-center uk-panel"></div>
+                    </li>
+                }
+            }
+            @*<li>
+                    <img src="~/st/r/phones/p1.jpg" alt="">
+                    <div class="uk-position-center uk-panel"></div>
+                </li>
+                <li>
+                    <img src="~/st/r/phones/p2.jpg" alt="">
+                    <div class="uk-position-center uk-panel"></div>
+                </li>
+                <li>
+                    <img src="~/st/r/phones/p3.jpg" alt="">
+                    <div class="uk-position-center uk-panel"></div>
+                </li>
+                <li>
+                    <img src="~/st/r/phones/p4.jpg" alt="">
+                    <div class="uk-position-center uk-panel"></div>
+                </li>
+                <li>
+                    <img src="~/st/r/phones/p5.jpg" alt="">
+                    <div class="uk-position-center uk-panel"></div>
+                </li>*@
 
         </ul>
 
