--- a/GhasreMobile/Areas/Admin/Views/Product/Create.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Product/Create.cshtml
@@ -71,8 +71,8 @@
                         <span asp-validation-for="PriceBeforeDiscount" class="text-danger"></span>
                     </div>
                     <div class="form-group col-md-2">
-                        <label>درصد تخفیف</label>
-                        <input asp-for="PriceAfterDiscount" maxlength="2" class="form-control form-control-sm" placeholder="مثال : 10">
+                        <label>قیمت بعد از تخفیف</label>
+                        <input asp-for="PriceAfterDiscount" class="form-control form-control-sm" placeholder="مثال : 1,000,000">
                         <span asp-validation-for="PriceAfterDiscount" class="text-danger"></span>
                     </div>
                 </div>
