update bog hadi lanatiiiiiiiiii

--- a/GhasreMobile/Areas/Admin/Views/Product/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Product/Index.cshtml
@@ -52,7 +52,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            @foreach (var item in Model)
+                            @foreach (var item in Model.OrderByDescending(i=>i.DateCreated))
                             {
                                 <tr id="productId_@item.ProductId">
                                     <td>@item.ProductId</td>
