--- a/GhasreMobile/Views/Affiliate/StoreView.cshtml
+++ b/GhasreMobile/Views/Affiliate/StoreView.cshtml
@@ -39,51 +39,53 @@
         </a>
     </div>
 </div>
-
-<div class="card">
-    <h3>
-        تصاویر
-    </h3>
-    <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slider>
-
-        <ul class="uk-slider-items uk-child-width-1-3 uk-child-width-1-3@s uk-child-width-1-4@m">
-            @foreach (var item in Model.TblStoreImageRel)
-            {
-                @if (item.Image != null)
+@if (Model.TblStoreImageRel.Any())
+{
+    <div class="card">
+        <h3>
+            تصاویر
+        </h3>
+        <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slider>
+            <ul class="uk-slider-items uk-child-width-1-3 uk-child-width-1-3@s uk-child-width-1-4@m">
+                @foreach (var item in Model.TblStoreImageRel)
                 {
-                    <li>
-                        <img src="~/Images/Store/@item.Image" alt="">
+                    @if (item.Image.Image != null)
+                    {
+                        <li>
+                            <img src="~/Images/Store/@item.Image.Image" alt="">
+                            <div class="uk-position-center uk-panel"></div>
+                        </li>
+                    }
+                }
+                @*<li>
+                        <img src="~/st/r/phones/p1.jpg" alt="">
                         <div class="uk-position-center uk-panel"></div>
                     </li>
-                }
-            }
-            @*<li>
-                    <img src="~/st/r/phones/p1.jpg" alt="">
-                    <div class="uk-position-center uk-panel"></div>
-                </li>
-                <li>
-                    <img src="~/st/r/phones/p2.jpg" alt="">
-                    <div class="uk-position-center uk-panel"></div>
-                </li>
-                <li>
-                    <img src="~/st/r/phones/p3.jpg" alt="">
-                    <div class="uk-position-center uk-panel"></div>
-                </li>
-                <li>
-                    <img src="~/st/r/phones/p4.jpg" alt="">
-                    <div class="uk-position-center uk-panel"></div>
-                </li>
-                <li>
-                    <img src="~/st/r/phones/p5.jpg" alt="">
-                    <div class="uk-position-center uk-panel"></div>
-                </li>*@
+                    <li>
+                        <img src="~/st/r/phones/p2.jpg" alt="">
+                        <div class="uk-position-center uk-panel"></div>
+                    </li>
+                    <li>
+                        <img src="~/st/r/phones/p3.jpg" alt="">
+                        <div class="uk-position-center uk-panel"></div>
+                    </li>
+                    <li>
+                        <img src="~/st/r/phones/p4.jpg" alt="">
+                        <div class="uk-position-center uk-panel"></div>
+                    </li>
+                    <li>
+                        <img src="~/st/r/phones/p5.jpg" alt="">
+                        <div class="uk-position-center uk-panel"></div>
+                    </li>*@
 
-        </ul>
+            </ul>
 
-        <ul class="navigation uk-slider-nav uk-dotnav uk-flex-center uk-margin"></ul>
+            <ul class="navigation uk-slider-nav uk-dotnav uk-flex-center uk-margin"></ul>
+        </div>
+
     </div>
+}
 
-</div>
 
 <div id="map" class="uk-box-shadow-medium">
 
