update bogs and edite efect btn

--- a/GhasreMobile/Views/Gallery/AlbumView.cshtml
+++ b/GhasreMobile/Views/Gallery/AlbumView.cshtml
@@ -32,7 +32,7 @@
             }
         </div>
         <div class="row">
-            <button class="btn btn-dashed uk-margin-auto" onclick="window.history.back()">بازگشت</button>
+            <button class="btn btn-primary uk-margin-auto " onclick="window.history.back()">بازگشت</button>
         </div>
     </div>
 </div>
