--- a/GhasreMobile/Views/Shared/Components/BlogsView/BlogsView.cshtml
+++ b/GhasreMobile/Views/Shared/Components/BlogsView/BlogsView.cshtml
@@ -22,7 +22,7 @@
 
     <ul class="navigation uk-slider-nav uk-dotnav uk-flex-center uk-margin uk-margin-top"></ul>
     <div class="row uk-margin-top">
-        <a class="btn btn-secondary uk-margin-auto" href="/Blog">بیشتر</a>
+        <a class="btn btn-primary uk-margin-auto" href="/Blog">بیشتر</a>
     </div>
 </div>
 
