--- a/GhasreMobile/Views/Shared/Components/DeliveryView/DeliveryView.cshtml
+++ b/GhasreMobile/Views/Shared/Components/DeliveryView/DeliveryView.cshtml
@@ -34,7 +34,7 @@
         </div>
     </div>
     <div class="rowr gap-t">
-        <button class="btn btn-primary" onclick="LoadingRun('#ajaxresultDelivery')">فرستادن درخواست</button>
+        <button class="btn btn-primary-gradient" onclick="LoadingRun('#ajaxresultDelivery')">فرستادن درخواست</button>
     </div>
 </form>
 
