--- a/GhasreMobile/Views/Shared/Components/GalleryView/GalleryView.cshtml
+++ b/GhasreMobile/Views/Shared/Components/GalleryView/GalleryView.cshtml
@@ -19,7 +19,7 @@
             }
         </div>
         <div class="row">
-            <a class="btn btn-secondary uk-margin-auto" href="/Gallery">بیشتر</a>
+            <a class="btn btn-primary uk-margin-auto" href="/Gallery">بیشتر</a>
         </div>
     </div>
 }
