--- a/GhasreMobile/Areas/User/Views/Order/OnlineOrder.cshtml
+++ b/GhasreMobile/Areas/User/Views/Order/OnlineOrder.cshtml
@@ -25,6 +25,6 @@
         <span class="text-danger" asp-validation-for="Body"></span>
     </div>
     <div class="rowr">
-        <button class="btn btn-primary">ارسال سفارش</button>
+        <button class="btn btn-primary-gradient">ارسال سفارش</button>
     </div>
 </form>
