--- a/GhasreMobile/Views/Shared/Components/DeliveryInContactView/DeliveryInContactView.cshtml
+++ b/GhasreMobile/Views/Shared/Components/DeliveryInContactView/DeliveryInContactView.cshtml
@@ -28,7 +28,7 @@
         <span class="text-danger" asp-validation-for="Address"></span>
     </div>
     <div class="rowr">
-        <button class="btn btn-primary" onclick="LoadingRun('#ajaxresultDeliveryInContact')">فرستادن درخواست</button>
+        <button class="btn btn-primary-gradient" onclick="LoadingRun('#ajaxresultDeliveryInContact')">فرستادن درخواست</button>
     </div>
 </form>
 <script>
