--- a/GhasreMobile/wwwroot/css/pages/product.scss
+++ b/GhasreMobile/wwwroot/css/pages/product.scss
@@ -120,6 +120,18 @@
         border: $mat-border-color 1px solid;
     }
 
+    &-title::after {
+        content: " ";
+        height: 1px;
+        width: calc(100% + 24px);
+        border-bottom: 2px dashed $mat-border-color;
+        margin-top: 14px;
+        margin-bottom: -12px;
+        margin-left: -12px;
+        margin-right: -12px;
+        position: relative;
+    }
+
 
     &-content {
         grid-area: content;
@@ -178,16 +190,25 @@
                 text-decoration: line-through;
                 font-size: 24px;
                 @include row-reverse;
+
+                .t {
+                    color: $danger;
+                    font-size: 11px !important;
+                    text-decoration: none !important;
+                    margin-top: auto;
+                    margin-bottom: 5px;
+                    margin-right: 4px;
+                }
             }
 
             .actual {
                 @include row-reverse;
-                color: $Text;
+                color: #273693;
                 font-size: 24px;
                 margin-top: 0px;
 
                 .t {
-                    color: $Text;
+                    color: #273693;
                     font-size: 13px;
                     margin-top: auto;
                     margin-bottom: 5px;
@@ -213,7 +234,7 @@
 
         li {
             direction: rtl;
-            min-height: 32px;
+            min-height: 42px;
             vertical-align: middle;
             list-style: disc !important;
         }
@@ -320,7 +341,6 @@
                 .button {
                     width: 100%;
                     white-space: nowrap;
-                    
                 }
             }
         }
