--- a/GhasreMobile/Views/Affiliate/StoreView.cshtml
+++ b/GhasreMobile/Views/Affiliate/StoreView.cshtml
@@ -51,7 +51,7 @@
                 {
                     @if (item.Image.Image != null)
                     {
-                        <li>
+                        <li class="uk-margin-auto" uk-grid >
                             <img src="~/Images/Store/@item.Image.Image" alt="">
                             <div class="uk-position-center uk-panel"></div>
                         </li>
