--- a/GhasreMobile/Areas/Admin/Views/Slider/Components/Create.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Slider/Components/Create.cshtml
@@ -21,7 +21,7 @@
             </div>
             <div class="form-group col-md-4">
                 <label>چند روزه : </label>
-                <input type="number" required class="form-control form-control-sm" name="SliderTime" placeholder="مثال : 2">
+                <input type="number" required class="form-control form-control-sm" name="SliderTime" placeholder="مثال : 2" pattern="\d*" maxlength="2">
             </div>
         </div>
         <div class="form-row">
