--- a/GhasreMobile/Areas/Admin/Views/Blog/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Blog/Index.cshtml
@@ -83,9 +83,15 @@
         }
 
         function Remove(id) {
-            $.post("/Admin/Blog/Delete/" + id, function () {
-                window.location.reload();
-            });
+            if (confirm('آیا از حذف اخبار  مورد نظر مطمئن هستید؟')) {
+
+                $.post("/Admin/Blog/Delete/" + id, function () {
+                    window.location.reload();
+                });
+            } else {
+                // Do nothing!
+            }
+
         }
 
         function BtnSearch() {
