--- a/GhasreMobile/Areas/Admin/Views/ContactUs/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/ContactUs/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<DataLayer.Models.TblContactUs>
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "تماس با ما";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
